<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/step_list_container"
    android:layout_centerVertical="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/step_list_item_height"
        >


        <TextView
            android:id="@+id/step_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:button="@drawable/check"
            android:checked="false"
            android:layout_marginLeft="@dimen/margin_normal"
            android:text="@string/_1"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_normal" />

        <TextView
            android:id="@+id/short_step_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dummy"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_alignBaseline="@+id/step_number"
            android:layout_alignBottom="@+id/step_number"
            android:layout_toRightOf="@+id/step_number"
            android:layout_toEndOf="@+id/step_number" />

        <ImageView
            android:id="@+id/video_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:contentDescription="@string/Null" />


    </RelativeLayout>


</android.support.v7.widget.CardView>