<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/widget_layout_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_header_height"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/widget_padding"
            android:paddingRight="@dimen/widget_padding">
            <ImageView
                android:id="@+id/widget_img_launcher"
                android:layout_width="@dimen/widget_logo_dimen"
                android:layout_height="@dimen/widget_logo_dimen"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/Null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:id="@+id/title_widget"
                android:paddingStart="@dimen/widget_header_padding"
                android:paddingLeft="@dimen/widget_header_padding"
                android:paddingEnd="@dimen/widget_header_padding"
                android:paddingRight="@dimen/widget_header_padding"/>
        </LinearLayout>

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ListView
                android:id="@+id/widget_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/empty_view"
                >

                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/noWidgetTextView"
                    android:text="@string/no_ingredients"
                    android:textColor="#000111"
                    android:textSize="@dimen/empty_widget_text"
                     />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_widget"
                    android:background="@color/colorPrimary"
                    android:layout_centerInParent="true"
                    android:text="@string/add"
                    android:layout_below="@+id/noWidgetTextView"
                    android:textColor="@android:color/white"
                    />

            </RelativeLayout>




        </FrameLayout>


    </LinearLayout>



</FrameLayout>