<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_collapseMode="pin">

    </android.support.v7.widget.Toolbar>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.tarun.saini.baking_app.ui.StepDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black">

                <ImageView
                    android:id="@+id/thumbnail_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/pholder" />

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/exo_player_height"
                    android:layout_margin="@dimen/nil_margin">

                </com.google.android.exoplayer2.ui.SimpleExoPlayerView>


            </FrameLayout>


            <TextView
                android:id="@+id/recipe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/dummy"
                android:textSize="@dimen/text_normal" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin_more_double">

                <ImageButton
                    android:id="@+id/previous_button"
                    android:layout_width="@dimen/skip_button_dimen"
                    android:layout_height="@dimen/skip_button_dimen"
                    android:layout_margin="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/previous_step"
                    android:gravity="end"
                    android:src="@drawable/ic_skip_previous_grey_800_48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/previous_step"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/previous_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/next_step"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/next_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.507" />


                <ImageButton
                    android:id="@+id/next_button"
                    android:layout_width="@dimen/skip_button_dimen"
                    android:layout_height="@dimen/skip_button_dimen"
                    android:layout_margin="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/next_step"
                    android:gravity="end"
                    android:src="@drawable/ic_skip_next_grey_800_48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>